tests/errors/test_70.xpp
// Loop lower bound must be of type i64

fn main() void {
	loop i in 100u, 200 {}

	loop i in 100u as i64, 200 {}

	loop i in "char", 19 {}

	loop i in true, 19 {}
}
